# project

./: .copier-answers.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .landscape.yaml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  CONTRIBUTING.md  Large_gcd.cpp  README.md  coveertion  oca_dependencies.txt  printinc  requirements.txt  test-requirements.txt
Project_javascript_game/: index.html  myScript.js  style.css  thanks.html
account_analytic_analysis_layout/: README.rst  __openerp__.py
account_analytic_analysis_recurring/: __init__.py  __openerp__.py  account_analytic_analysis_recurring.py  account_analytic_analysis_recurring_view.xml
analytic_account_sequence/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_analytic_account.py  account_analytic_account_view.xml  analytic_account_sequence.py  analytic_account_sequence_data.xml
analytic_base_department/: README.rst  __init__.py  __openerp__.py  analytic.py
analytic_department/: LICENSE  __init__.py  __openerp__.py  analytic.py  analytic_view.xml
analytic_hours_block/: __init__.py  __manifest__.py  __openerp__.py  account_analytic.py  hours_block.py  hours_block_data.xml  hours_block_demo.xml  hours_block_menu.xml  hours_block_view.xml  product.py  product_view.xml  project.py  project_view.xml  report.xml
analytic_warning/: README.rst  __init__.py  __openerp__.py  analytic_account_model.py  analytic_account_view.xml  project_task_model.py
base_contract/: __init__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5543 files in other folders)
