[project]
name = "odoo-addons-oca-project"
version = "17.0.20240322.0"
dependencies = [
    "odoo-addon-project_sequence>=17.0dev,<17.1dev",
    "odoo-addon-project_task_add_very_high>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
