[project]
name = "odoo-addons-oca-project"
version = "17.0.20240730.0"
dependencies = [
    "odoo-addon-project_department>=17.0dev,<17.1dev",
    "odoo-addon-project_parent>=17.0dev,<17.1dev",
    "odoo-addon-project_sequence>=17.0dev,<17.1dev",
    "odoo-addon-project_task_add_very_high>=17.0dev,<17.1dev",
    "odoo-addon-project_task_default_stage>=17.0dev,<17.1dev",
    "odoo-addon-project_task_description_template>=17.0dev,<17.1dev",
    "odoo-addon-project_task_stage_mgmt>=17.0dev,<17.1dev",
    "odoo-addon-project_task_tag>=17.0dev,<17.1dev",
    "odoo-addon-project_timesheet_time_control>=17.0dev,<17.1dev",
    "odoo-addon-project_type>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
